--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>To-Do List</title>
 
-	<link rel="stylesheet" href="styles.css">
-	<script src="main.js" defer></script>
+						
+
+	<link rel="stylesheet" href="styles/styles.css">
+	<link rel="stylesheet" href="styles/checkbox.css">
+	<script src="testing.js" defer></script>
 </head>
 <body>
 	<div class="container">
+		<a href="testing.html">Test</a>
 
 		<div class="card">
 			<h1>To-Do List</h1>
